fixed a css error that was causing the footer to jump up on iphone screens

--- a/public/style.css
+++ b/public/style.css
@@ -15,13 +15,13 @@ header {
 }
 content {
    padding: 10px;
-   padding-bottom: 60px;
+   padding-bottom: 20px;
 }
 footer {
    position: absolute;
    bottom: 0;
    width: 100%;
-   height: 60px;
+   height: 20px;
 
 }
 
